Fixed mobile display

--- a/gridExample.html
+++ b/gridExample.html
@@ -137,7 +137,7 @@
             </div>
         </nav>
 
-        <div class='grid-item-searchBar space flex show'>
+        <div class='grid-item-searchBar space flex g'>
             <div class="item">
                 <div>
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -166,7 +166,7 @@
 
         </div>
         <div class="contents grid-container">
-            <div class='grid-item-searchBar space flex'>
+            <div class='grid-item-searchBar space flex hide'>
                 <div class="item">
                     <div>
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
